; ModuleID = '/home/carl/AnghaBench/libgit2/tests/stash/extr_save.c_test_stash_save__cannot_stash_against_an_unborn_branch.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/stash/extr_save.c_test_stash_save__cannot_stash_against_an_unborn_branch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"refs/heads/unborn\00", align 1
@GIT_EUNBORNBRANCH = common dso_local global i32 0, align 4
@stash_tip_oid = common dso_local global i32 0, align 4
@signature = common dso_local global i32 0, align 4
@GIT_STASH_DEFAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_stash_save__cannot_stash_against_an_unborn_branch() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @repo, align 4
  %3 = call i32 @git_reference_symbolic_create(i32** %1, i32 %2, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32 1, i32* null)
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32, i32* @GIT_EUNBORNBRANCH, align 4
  %6 = load i32, i32* @repo, align 4
  %7 = load i32, i32* @signature, align 4
  %8 = load i32, i32* @GIT_STASH_DEFAULT, align 4
  %9 = call i32 @git_stash_save(i32* @stash_tip_oid, i32 %6, i32 %7, i32* null, i32 %8)
  %10 = call i32 @cl_assert_equal_i(i32 %5, i32 %9)
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @git_reference_free(i32* %11)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_symbolic_create(i32**, i32, i8*, i8*, i32, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_stash_save(i32*, i32, i32, i32*, i32) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
